@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.lastship" name="Lastship Module" version="1.0.4~nightly11" provider-name="LastShip">
+<addon id="script.module.lastship" name="Lastship Module" version="1.0.4" provider-name="LastShip">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
 	</requires>
@@ -8,6 +8,16 @@
 		<platform>all</platform>
 		<summary lang="en">lastship</summary>
 		<description>Viel Spaß mit LastShip</description>
-		<news lang="de">- Add Trakt Collections AutoSync</news>
+		<news lang="de">- Trakt Bibliothek automatisch Synchronisieren
+- Fix Umlaute Suche	
+- Add Clearing Gesamten Speicher und Metaspeicher 
+- Update jsunpack.py
+- movies.py
+- tvshows.py
+- libtools optimiert (Fehler Behebung)
+- Update cache.py und navigator.py
+- Add tata (nur Filme)
+- Update hdfilme
+- Update hdstreams</news>
 	</extension>
 </addon>
